--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.13"
   },
   "devDependencies": {},
   "scripts": {
